BBS.Parser/antlrbuild/BBSCodeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from grammar/BBSCodeParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Casasoft.BBS.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class BBSCodeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SEA_WS=1, TAG_OPEN=2, BBS_TEXT=3, TAG_CLOSE=4, TAG_SLASH_CLOSE=5, TAG_SLASH=6, 
		TAG_EQUALS=7, TAG_NAME=8, TAG_WHITESPACE=9, ATTVALUE_VALUE=10, ATTRIBUTE=11;
	public const int
		RULE_bbsCodeElement = 0, RULE_bbsCodeContent = 1, RULE_bbsCodeAttribute = 2, 
		RULE_bbsCodeAttributeName = 3, RULE_bbsCodeAttributeValue = 4, RULE_bbsCodeTagName = 5, 
		RULE_bbsCodeChardata = 6;
	public static readonly string[] ruleNames = {
		"bbsCodeElement", "bbsCodeContent", "bbsCodeAttribute", "bbsCodeAttributeName", 
		"bbsCodeAttributeValue", "bbsCodeTagName", "bbsCodeChardata"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'[['", null, "']]'", "'/]]'", "'/'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SEA_WS", "TAG_OPEN", "BBS_TEXT", "TAG_CLOSE", "TAG_SLASH_CLOSE", 
		"TAG_SLASH", "TAG_EQUALS", "TAG_NAME", "TAG_WHITESPACE", "ATTVALUE_VALUE", 
		"ATTRIBUTE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BBSCodeParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static BBSCodeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BBSCodeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BBSCodeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class BbsCodeElementContext : ParserRuleContext {
		public ITerminalNode[] TAG_OPEN() { return GetTokens(BBSCodeParser.TAG_OPEN); }
		public ITerminalNode TAG_OPEN(int i) {
			return GetToken(BBSCodeParser.TAG_OPEN, i);
		}
		public BbsCodeTagNameContext[] bbsCodeTagName() {
			return GetRuleContexts<BbsCodeTagNameContext>();
		}
		public BbsCodeTagNameContext bbsCodeTagName(int i) {
			return GetRuleContext<BbsCodeTagNameContext>(i);
		}
		public ITerminalNode[] TAG_CLOSE() { return GetTokens(BBSCodeParser.TAG_CLOSE); }
		public ITerminalNode TAG_CLOSE(int i) {
			return GetToken(BBSCodeParser.TAG_CLOSE, i);
		}
		public BbsCodeContentContext bbsCodeContent() {
			return GetRuleContext<BbsCodeContentContext>(0);
		}
		public ITerminalNode TAG_SLASH() { return GetToken(BBSCodeParser.TAG_SLASH, 0); }
		public BbsCodeAttributeContext[] bbsCodeAttribute() {
			return GetRuleContexts<BbsCodeAttributeContext>();
		}
		public BbsCodeAttributeContext bbsCodeAttribute(int i) {
			return GetRuleContext<BbsCodeAttributeContext>(i);
		}
		public ITerminalNode TAG_SLASH_CLOSE() { return GetToken(BBSCodeParser.TAG_SLASH_CLOSE, 0); }
		public BbsCodeElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bbsCodeElement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.EnterBbsCodeElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.ExitBbsCodeElement(this);
		}
	}

	[RuleVersion(0)]
	public BbsCodeElementContext bbsCodeElement() {
		BbsCodeElementContext _localctx = new BbsCodeElementContext(Context, State);
		EnterRule(_localctx, 0, RULE_bbsCodeElement);
		int _la;
		try {
			State = 49;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 14; Match(TAG_OPEN);
				State = 15; bbsCodeTagName();
				State = 19;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==TAG_NAME) {
					{
					{
					State = 16; bbsCodeAttribute();
					}
					}
					State = 21;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 22; Match(TAG_CLOSE);
				State = 23; bbsCodeContent();
				State = 24; Match(TAG_OPEN);
				State = 25; Match(TAG_SLASH);
				State = 26; bbsCodeTagName();
				State = 27; Match(TAG_CLOSE);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 29; Match(TAG_OPEN);
				State = 30; bbsCodeTagName();
				State = 34;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==TAG_NAME) {
					{
					{
					State = 31; bbsCodeAttribute();
					}
					}
					State = 36;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 37; Match(TAG_SLASH_CLOSE);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 39; Match(TAG_OPEN);
				State = 40; bbsCodeTagName();
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==TAG_NAME) {
					{
					{
					State = 41; bbsCodeAttribute();
					}
					}
					State = 46;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 47; Match(TAG_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BbsCodeContentContext : ParserRuleContext {
		public BbsCodeChardataContext[] bbsCodeChardata() {
			return GetRuleContexts<BbsCodeChardataContext>();
		}
		public BbsCodeChardataContext bbsCodeChardata(int i) {
			return GetRuleContext<BbsCodeChardataContext>(i);
		}
		public BbsCodeElementContext[] bbsCodeElement() {
			return GetRuleContexts<BbsCodeElementContext>();
		}
		public BbsCodeElementContext bbsCodeElement(int i) {
			return GetRuleContext<BbsCodeElementContext>(i);
		}
		public BbsCodeContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bbsCodeContent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.EnterBbsCodeContent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.ExitBbsCodeContent(this);
		}
	}

	[RuleVersion(0)]
	public BbsCodeContentContext bbsCodeContent() {
		BbsCodeContentContext _localctx = new BbsCodeContentContext(Context, State);
		EnterRule(_localctx, 2, RULE_bbsCodeContent);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SEA_WS || _la==BBS_TEXT) {
				{
				State = 51; bbsCodeChardata();
				}
			}

			State = 60;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 54; bbsCodeElement();
					State = 56;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==SEA_WS || _la==BBS_TEXT) {
						{
						State = 55; bbsCodeChardata();
						}
					}

					}
					} 
				}
				State = 62;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BbsCodeAttributeContext : ParserRuleContext {
		public BbsCodeAttributeNameContext bbsCodeAttributeName() {
			return GetRuleContext<BbsCodeAttributeNameContext>(0);
		}
		public ITerminalNode TAG_EQUALS() { return GetToken(BBSCodeParser.TAG_EQUALS, 0); }
		public BbsCodeAttributeValueContext bbsCodeAttributeValue() {
			return GetRuleContext<BbsCodeAttributeValueContext>(0);
		}
		public BbsCodeAttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bbsCodeAttribute; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.EnterBbsCodeAttribute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.ExitBbsCodeAttribute(this);
		}
	}

	[RuleVersion(0)]
	public BbsCodeAttributeContext bbsCodeAttribute() {
		BbsCodeAttributeContext _localctx = new BbsCodeAttributeContext(Context, State);
		EnterRule(_localctx, 4, RULE_bbsCodeAttribute);
		try {
			State = 68;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 63; bbsCodeAttributeName();
				State = 64; Match(TAG_EQUALS);
				State = 65; bbsCodeAttributeValue();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67; bbsCodeAttributeName();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BbsCodeAttributeNameContext : ParserRuleContext {
		public ITerminalNode TAG_NAME() { return GetToken(BBSCodeParser.TAG_NAME, 0); }
		public BbsCodeAttributeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bbsCodeAttributeName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.EnterBbsCodeAttributeName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.ExitBbsCodeAttributeName(this);
		}
	}

	[RuleVersion(0)]
	public BbsCodeAttributeNameContext bbsCodeAttributeName() {
		BbsCodeAttributeNameContext _localctx = new BbsCodeAttributeNameContext(Context, State);
		EnterRule(_localctx, 6, RULE_bbsCodeAttributeName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; Match(TAG_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BbsCodeAttributeValueContext : ParserRuleContext {
		public ITerminalNode ATTVALUE_VALUE() { return GetToken(BBSCodeParser.ATTVALUE_VALUE, 0); }
		public BbsCodeAttributeValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bbsCodeAttributeValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.EnterBbsCodeAttributeValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.ExitBbsCodeAttributeValue(this);
		}
	}

	[RuleVersion(0)]
	public BbsCodeAttributeValueContext bbsCodeAttributeValue() {
		BbsCodeAttributeValueContext _localctx = new BbsCodeAttributeValueContext(Context, State);
		EnterRule(_localctx, 8, RULE_bbsCodeAttributeValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; Match(ATTVALUE_VALUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BbsCodeTagNameContext : ParserRuleContext {
		public ITerminalNode TAG_NAME() { return GetToken(BBSCodeParser.TAG_NAME, 0); }
		public BbsCodeTagNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bbsCodeTagName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.EnterBbsCodeTagName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.ExitBbsCodeTagName(this);
		}
	}

	[RuleVersion(0)]
	public BbsCodeTagNameContext bbsCodeTagName() {
		BbsCodeTagNameContext _localctx = new BbsCodeTagNameContext(Context, State);
		EnterRule(_localctx, 10, RULE_bbsCodeTagName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; Match(TAG_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BbsCodeChardataContext : ParserRuleContext {
		public ITerminalNode BBS_TEXT() { return GetToken(BBSCodeParser.BBS_TEXT, 0); }
		public ITerminalNode SEA_WS() { return GetToken(BBSCodeParser.SEA_WS, 0); }
		public BbsCodeChardataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bbsCodeChardata; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.EnterBbsCodeChardata(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBBSCodeParserListener typedListener = listener as IBBSCodeParserListener;
			if (typedListener != null) typedListener.ExitBbsCodeChardata(this);
		}
	}

	[RuleVersion(0)]
	public BbsCodeChardataContext bbsCodeChardata() {
		BbsCodeChardataContext _localctx = new BbsCodeChardataContext(Context, State);
		EnterRule(_localctx, 12, RULE_bbsCodeChardata);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			_la = TokenStream.LA(1);
			if ( !(_la==SEA_WS || _la==BBS_TEXT) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace Casasoft.BBS.Parser
